--- a/stylua.toml
+++ b/stylua.toml
@@ -4,7 +4,7 @@ line_endings = "Unix"
 indent_type = "Tabs"
 indent_width = 4
 quote_style = "AutoPreferDouble"
-call_parentheses = "NoSingleString"
+call_parentheses = "Always"
 collapse_simple_statement = "Never"
 space_after_function_names = "Never"
 block_newline_gaps = "Never"
