--- a/.luarc.json
+++ b/.luarc.json
@@ -1,3 +1,8 @@
 {
-	"runtime.version": "LuaJIT"
+	"$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+	"runtime": {
+		"version": "LuaJIT",
+		"path": ["src/?.lua"],
+		"pathStrict": true
+	}
 }
