--- a/.luarc.json
+++ b/.luarc.json
@@ -13,7 +13,7 @@
 	},
 	"runtime": {
 		"version": "LuaJIT",
-		"path": ["src/?.lua"],
+		"path": ["packages/?/init.lua", "packages/?.lua"],
 		"pathStrict": true
 	}
 }
